# rust_wasm

./: .gitignore  Cargo.toml  README.md
pkg/: .gitignore  index.css  index.html  index.js  package.json
src/: lib.rs  main.rs
src/shared/: app_gui.rs  app_init.rs  mod.rs
