[package]
name = "hello_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy = "0.13.2"
wasm-bindgen = "0.2.92"
include_dir = "0.7.3"
bevy_egui = "0.27.0"

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Document", "HtmlCanvasElement", "Event"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3

